kubernetes/ingresss.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-platform
  namespace: task-platform
spec:
  ingressClassName: traefik

  rules:
    - host: task-platform.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
